Application details update implement API
