# controllers/application.js
@@ -6,6 +6,9 @@ const {
     application,
     event
 } = require("../db");
+const {
+    v4: uuidv4
+} = require('uuid');
 
 exports.appTrackerCount = async (request, reply) => {
     try {
@@ -95,6 +98,87 @@ exports.appDetails = async (request, reply) => {
                     response
                 )
             );
+    } catch (error) {
+        await event.insertEventTransaction(request.inValid);
+        return reply
+            .status(statusCodes.INTERNAL_SERVER_ERROR)
+            .send(
+                responseFormatter(
+                    statusCodes.INTERNAL_SERVER_ERROR,
+                    "Internal server error occurred", {
+                        error: error.message
+                    }
+                )
+            );
+    }
+}
+
+exports.appDetailSubmit = async (request, reply) => {
+    try {
+        const {
+            leadId,
+            status,
+            applicationId,
+            personalDetails,
+            analysis,
+            agentDetails,
+            proposerDetails,
+            nomineeDetails,
+            payoutDetails,
+            healthDetails,
+            fatcaCraDetails
+        } = request.body;
+        const uuid = uuidv4();
+
+        let tableData, row;
+        if (applicationId) {
+            const data = await application.getApplicationDetails(applicationId);
+            if (!data?.length) {
+                return reply
+                    .status(statusCodes.NOT_FOUND)
+                    .send(
+                        responseFormatter(
+                            statusCodes.NOT_FOUND,
+                            "Application not found"
+                        )
+                    );
+            }
+            row = data[0];
+        }
+
+        tableData = {
+            applicationId: applicationId || uuid,
+            quoteId: row?.quote_id || null,
+            leadId: leadId || row?.lead_id,
+            status: status || row?.status || 1,
+            applicationJson: {
+                ...row?.application_json,
+                personalDetails: personalDetails || row?.application_json?.personalDetails,
+                analysis: analysis || row?.application_json?.analysis,
+                agentDetails: agentDetails || row?.application_json?.agentDetails,
+                proposerDetails: proposerDetails || row?.application_json?.proposerDetails,
+                nomineeDetails: nomineeDetails || row?.application_json?.nomineeDetails,
+                payoutDetails: payoutDetails || row?.application_json?.payoutDetails,
+                healthDetails: healthDetails || row?.application_json?.healthDetails,
+                fatcaCraDetails: fatcaCraDetails || row?.application_json?.fatcaCraDetails,
+            },
+            quoteJson: row?.quote_json || null,
+            requirementJson: row?.requirement_json || null,
+            premium: row?.premium || 0,
+        }
+
+        const response = await application.createUpdateApplication(applicationId, tableData);
+
+        reply
+            .status(statusCodes.OK)
+            .send(
+                responseFormatter(
+                    statusCodes.OK,
+                    !applicationId ? "Application created successfully!" : "Application updated successfully!",
+                    response
+                )
+            );
+
     } catch (error) {
         await event.insertEventTransaction(request.inValid);
         return reply
