# openapi.yaml
@@ -544,3 +544,134 @@ paths:
                     message:
                       type: string
                       example: "Unauthorized access."
+
+  /application/details-update:
+      post:
+        summary: Application detail update or create
+        description: Application detail update or create
+        operationId: appDetailSubmit
+        parameters:
+          - name: authorization
+            in: header
+            required: true
+            description: Bearer token for authorization.
+            schema:
+              type: string
+              example: "Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIs..."
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - leadId
+                  - applicationId
+                properties:
+                  leadId:
+                    type: string
+                    description: Lead Id os customer
+                    example: "12345678"
+                  applicationId:
+                    type: string
+                    description: Application ID
+                    example: "12345678"
+                  personalDetails:
+                    type: object
+                    description: Personal details object
+                    example: {}
+                  analysis:
+                    type: object
+                    description: Sutability analysis object
+                    example: {}
+                  agentDetails:
+                    type: object
+                    description: Agent details object
+                    example: {}
+                  proposerDetails:
+                    type: object
+                    description: Proposer details object
+                    example: {}
+                  nomineeDetails:
+                    type: object
+                    description: Nominee details array of object object
+                    example: [{}]
+                  payoutDetails:
+                    type: object
+                    description: Payout bank details object
+                    example: {}
+                  healthDetails:
+                    type: object
+                    description: Health details object
+                    example: {}
+                  fatcaCraDetails:
+                    type: object
+                    description: FARCA CRA Details object
+                    example: {}
+        responses:
+          "200":
+            description: Application not found!
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    status:
+                      type: integer
+                      description: HTTP status code
+                      example: 200
+                    message:
+                      type: string
+                      description: Status message
+                      example: "Application created successfully!"
+                    data:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          id:
+                            type: number
+                            description: Application unique ID
+                            example: "1"
+                          application_id:
+                            type: number
+                            description: Application ID/Policy/Proposal No
+                            example: "6766647999"
+                          quote_id:
+                            type: number
+                            description: Quotation No
+                            example: "12321321321"
+                          lead_id:
+                            type: number
+                            description: Lead ID
+                            example: "1"
+                          status:
+                            type: number
+                            description: Application status like draft, QC, etc..
+                            example: "1"
+                          application_json:
+                            type: object
+                            description: Customer details object
+                            example: "{}"
+                          quote_json:
+                            type: number
+                            description: Quotation JSON Details
+                            example: "{}"
+                          requirement_json:
+                            type: number
+                            description: Medical/FInancial/PSC or Underwriting required doc upload Object
+                            example: "{}"
+                          premium:
+                            type: number
+                            description: Lead Premium details
+                            example: "19000"
+          "401":
+            description: Unauthorized - Invalid token
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    message:
+                      type: string
+                      example: "Unauthorized access."
